Mocha and Diana (Easy Version)